package com.programacaoiii.assistencia_tecnica.servicos.padroes.template;

public class ReparoCelular extends TemplateMethod {

    @Override
    protected void diagnosticarProblema() {
    }

    @Override
    protected void realizarReparo() {
    }

    @Override
    protected void realizarTestes() {
    }

    @Override
    protected void separarMateriais() {
    }
}