@startuml
title Diagrama de Classes - Assistência Técnica (Refatorado)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members
left to right direction

package "Assistencia Tecnica" {

    package "model.enums" {
        enum EstadoOSEnum {
            ABERTA
            AGUARDANDO_ORCAMENTO
            AGUARDANDO_APROVACAO
            EM_REPARO
            FINALIZADA
            CANCELADA
        }

        enum TipoHardwareEnum {
            COMPUTADOR
            NOTEBOOK
            CELULAR
            OUTROS
        }

        enum TipoPecaEnum {
            PROCESSADOR
            MEMORIA_RAM
            PLACA_MAE
            TELA
            BATERIA
        }
    }

    package "model.entity" {
        abstract class PessoaAbstrato {
            -id : Long
            -nome : String
            -cpf : String
            -dataNascimento : LocalDate
            -endereco : String
        }

        abstract class ProdutoAbstrato{
            -numeroSerie : Long
        }

        class Administrador extends PessoaAbstrato{
            +abrirOS()
            +atualizarOS()
            +excluirOS()
        }

        class Atendente extends PessoaAbstrato {
            +abrirOS()
            +atualizarOS()
            +reqExclusaoOS()
        }

        class Cliente extends PessoaAbstrato {
            -hardware_id : List<Hardware>
            +verHardwares()
            +aprovarOrcamento()
            +cancelarOS()
        }

        class Tecnico extends PessoaAbstrato {
            +fazerOrcamento(os, valor)
            +assumirOS(os)
            +executarOS(os)
            +finalizarOS(os)
        }

        class Hardware extends ProdutoAbstrato {
            -tipoHardware : TipoHardwareEnum
            -cliente : Cliente
        }

        class Peca extends ProdutoAbstrato {
            -nome : String
            -tipoPeca : TipoPecaEnum
        }

        class OrdemServico{
            -id : UUID
            -valorOrcamento : double
            -descricao : String
            -dataCriacao : Instant
            -dataAtualizacao : Instant
            -estado : EstadoOSEnum
            -comportamentoEstado : StateInterface <<Transient>>
            -cliente : Cliente
            -hardware : Hardware
            -tecnico : Tecnico
            -pecasUtilizadas : Set<Peca>
            
            +aprovar()
            +orcamentar()
            +executar()
            +finalizar()
            +cancelar()
            +setEstado(novoEstado)
        }
    }

    package "repository" {
        interface OrdemServicoRepositorio <<JpaRepository>> {
            +findByTecnicoId(Long)
            +findByClienteId(Long)
            +findByEstado(EstadoOSEnum)
        }
        interface ClienteRepositorio <<JpaRepository>>
        interface TecnicoRepositorio <<JpaRepository>>
        interface HardwareRepositorio <<JpaRepository>>
        interface PecaRepositorio <<JpaRepository>>
    }

    package "service" {
        class OrdemServicoServico {
            +salvarOS(dto)
            +atualizarOS(id, dto)
            +aprovarOrcamento(id)
            +executarOS(id)
            +finalizarOS(id)
        }
        
    }

    package "service.patterns.state" {
        interface StateInterface {
            +abrir(os)
            +orcamentar(os)
            +aprovar(os)
            +executar(os)
            +finalizar(os)
            +cancelar(os)
        }

        abstract class EstadoOSAbstrato implements StateInterface {
            #proibir(acao)
        }

        class EstadoAberta extends EstadoOSAbstrato
        class EstadoAguardandoOrcamento extends EstadoOSAbstrato
        class EstadoAguardandoAprovacao extends EstadoOSAbstrato
        class EstadoEmReparo extends EstadoOSAbstrato
        class EstadoFinalizada extends EstadoOSAbstrato
        class EstadoCancelada extends EstadoOSAbstrato
    }

    package "service.patterns.template" {
        abstract class TemplateMethod {
            +executarProcessoReparo() {final}
            #diagnosticarProblema() {abstract}
            #realizarReparo() {abstract}
            #realizarTestes() {abstract}
            #separarMateriais() {abstract}
            #limpezaFinal()
        }

        class ReparoNotebook extends TemplateMethod
        class ReparoCelular extends TemplateMethod
        class ReparoComputador extends TemplateMethod
        class ReparoOutros extends TemplateMethod
    }
    
    package "service.singleton" {
        class DatabaseConnector <<Singleton>> {
            -instance : DatabaseConnector {static}
            -connection : Connection
            -DatabaseConnector()
            +getInstance() : DatabaseConnector {static}
        }
    }
}

' Relacionamentos
OrdemServico "0..*" --> "1" Cliente : pertence a
OrdemServico "0..*" --> "1" Hardware : refere-se a
OrdemServico "0..*" --> "0..1" Tecnico : atribuído a
OrdemServico "0..*" o-- "0..*" Peca : utiliza

Hardware "0..*" --> "1" Cliente : dono
OrdemServico ..> StateInterface : usa
OrdemServico *-- EstadoOSEnum : status atual

OrdemServicoServico ..> OrdemServicoRepositorio : usa
Tecnico ..> TemplateMethod : instancia e usa

@enduml